--- a/.github/workflows/heroku-push.yml
+++ b/.github/workflows/heroku-push.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.0.0
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "msu-covid"
+          heroku_app_name: "msu-covid-tracker"
           heroku_email: "bonham@gmail.com"
