--- a/.github/workflows/update-graph.yml
+++ b/.github/workflows/update-graph.yml
@@ -36,7 +36,7 @@ jobs:
           ./.github/scripts/commit.sh
 
       - name: push to heroku
-      - uses: akhileshns/heroku-deploy@v3.0.0
+        uses: akhileshns/heroku-deploy@v3.0.0
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "msu-covid-tracker"
