--- a/.github/workflows/update-graph.yml
+++ b/.github/workflows/update-graph.yml
@@ -23,3 +23,7 @@ jobs:
       - name: Execute Python script
         run: |
           python .github/scripts/update.py
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_STORAGE_BUCKET_NAME: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
