fix: pass heroku env correctly

--- a/.github/workflows/heroku-push.yml
+++ b/.github/workflows/heroku-push.yml
@@ -2,7 +2,7 @@ name: Push to Heroku
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,3 +13,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "msu-covid-tracker"
           heroku_email: "bonham@gmail.com"
+        env:
+          HD_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          HD_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          HD_AWS_STORAGE_BUCKET_NAME: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
