--- a/.github/workflows/update-graph.yml
+++ b/.github/workflows/update-graph.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.7
 
       - name: Install Requirements
-        run: pip install requests beautifulsoup4
+        run: pip install requests beautifulsoup4 boto3
 
       - name: Execute Python script
         run: |
