--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ Flask-Compress==1.8.0
 future==0.18.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.2
+Jinja2>=2.11.3
 MarkupSafe==1.1.1
-numpy==1.19.4
+numpy>=1.21
 pandas==1.1.4
 plotly==4.12.0
 python-dateutil==2.8.1
