--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ dash-renderer==1.8.3
 dash-table==4.11.0
 Flask==1.1.2
 Flask-Compress==1.8.0
-future==0.18.2
+future
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2>=2.11.3
